@@ -4,6 +4,7 @@ Changes in 1.9.18
     * [FELIX-6177] : Use BlockingQueue instead of synchronized blocks in UpdateThread
 ** Bug
     * [FELIX-6162] : ConfigurationManager crashes on shutdown if PersistenceManager not yet available
+    * [FELIX-6296] : NPE in Configuration.getProcessedProperties if no properties are set
 
 
 Changes in 1.9.16
